Fix jump bug and drag from bottom bug in highlightTool (#108)
* Fix scroll jump in highlightTool.

* Remove hacky inline test of NLP hints code.

* Fix drag from bottom of article bug.

* Minor tweaks to Researcher Logout UI.

Remove file answers_next_questions.csv.

--- a/app/components/TopicHighlighter/styles.scss
+++ b/app/components/TopicHighlighter/styles.scss
@@ -44,7 +44,7 @@
     margin-bottom: 10px;
   }
 
-  #article-container {
+  .article-click-box {
     padding: 1em;
     border: 1px solid black;
   }
